apps/positron/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: positron-backend
  namespace: positron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: positron-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: positron-backend
        nats-access: "true"
        minio-access: "true"
        postgres-access: "true"
    spec:
      revisionHistoryLimit: 0
      containers:
        - tty: true
          image: ghcr.io/profiidev/positron/positron-backend:master
          imagePullPolicy: Always
          name: positron-backend
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - mountPath: /etc/ssl/certs/e11529a0.0
              subPath: e11529a0.0
              name: cluster-ca-cert
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: cluster-ca-cert
          secret:
            defaultMode: 420
            secretName: cluster-ca-cert
