apps/positron/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: positron-frontend
  namespace: positron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: positron-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: positron-frontend
    spec:
      revisionHistoryLimit: 0
      containers:
        - image: ghcr.io/profiidev/positron/positron-frontend:master
          imagePullPolicy: Always
          name: positron-frontend
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
