apps/positron/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: positron-backend
  namespace: positron
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: positron-backend
  type: ClusterIP
