apps/positron/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: positron-frontend
  namespace: positron
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: positron-frontend
  type: ClusterIP
