apps/positron/backend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: positron-backend
  namespace: positron
  labels:
    name: positron-backend
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: positron/cloudflare-ca-cert
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: profidev.io
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/backend(.*)"
            backend:
              service:
                name: positron-backend
                port:
                  number: 8000
  tls:
    - hosts:
        - profidev.io
        - "*.profi.dev"
      secretName: cloudflare-cert
