apps/positron/frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: positron-frontend
  namespace: positron
  labels:
    name: positron-frontend
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: positron/cloudflare-ca-cert
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: profidev.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: positron-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - profidev.io
        - "*.profi.dev"
      secretName: cloudflare-cert
